Fix archives blog list align

--- a/sample/themes/simple/assets/main.css
+++ b/sample/themes/simple/assets/main.css
@@ -1,3 +1,7 @@
+ul.no_bullets {
+    margin-left: 0;
+}
+
 ul.no_bullets li {
     list-style-type: none;
 }
